# CNNHandwriting

./: CMakeLists.txt  README.md
include/layers/: ConvolutionalLayer.h  FullyConnectedLayer.h  Layer.h  PoolingLayer.h  SoftmaxLayer.h
include/utils/: Activation.h  DataLoader.h  Loss.h  NeuralNetwork.h  Optimizer.h
src/: main.cpp
src/layers/: ConvolutionalLayer.cpp  FullyConnectedLayer.cpp  PoolingLayer.cpp  SoftmaxLayer.cpp
src/utils/: Activation.cpp  DataLoader.cpp  Loss.cpp  NeuralNetwork.cpp  Optimizer.cpp
